(feat(inspircd): Update config files and remove unnecessary lines for IRC server)

--- a/index.html
+++ b/index.html
@@ -43,65 +43,71 @@
     <br><hr>
 
     <div>
-        <h1 class="tit">服务|Service</h1>
+        <h1 class="tit">ARKFUTURE NET</h1>
+        <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
+        <P>我们以开源配置的方式和使用镜像服务器的方式部署</P>
+        <P>保证匿名性和开放性</P>
 
-        <div></div>
-        <h2>站点|WEB</h2>
-        <p>使用域名时,无端口号 </p>
-        <p>使用其他镜像站时,无80端口时使用1314端口</p>
-    </div>
-    <br>
-    <div>
-        <h2>代理|PROXY & VPN</h2>
-        <p>VPN使用SoftEtherVPN</p>
-        <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-        <p>固定内网地址:x.x.x.1为路由器地址|x.x.x.2为服务器地址</p>
-        <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
-    </div>
-    <br>
-    <div>
-        <h2>资源库|RES</h2>
-        <p>获取我们的内部资源(书/项目/文献等资源列表)</p>
-        <a href="ARKFUTURE/RES/rel.csv">csv列表文件 [rel.csv]</a>
-    </div>
-    <br>
-    <div>
-        <h2>订阅源|RSS/FEED/ATOM</h2>
-        <a href="ARKFUTURE/RES/rss.opml">opml文件 [rss.opml]</a>
-    </div>
-    <br>
-    <div>
-        <h2 id="irc">聊天|IRC</h2>
-        <p>默认端口连接不上请切换备用端口连接</p>
-        <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
-        <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-        <a href="irc://afeirc.yuun.ink:6668/#arkfuture_studio">点击加入群聊[#arkfuture_studio]</a></li>
-    </div>
-    <br>
-    <div>
-        <h2>相关配置文件</h2>
-        <p>配置文件中所有密码为 123456,请及时修改</p>
-        <a href="ARKFUTURE/CONF/inspircd/1.sh">IRCD 下载脚本</a>
-        <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata6x配置文件</a>
-        <a href="ARKFUTURE/CONF/minecraft/server.properties">Minecraft配置文件</a>
-    </div>
-    <br>
-    <div>
-        <h2>其他项目</h2>
-        <p>战队：qq飞车-骇客军团</p>
-        <p>社交媒体：<a href="https://linktr.ee/arkfuture">ARKFUTURE 社交媒体</a></p>
-    </div>
-    <br>
-    <div>
-        <h2>小组件</h2>
-        <center>
-            <img src="https://www.hamqsl.com/solar101vhfper.php">
-            <img src="https://www.hamqsl.com/solar101vhfpic.php">
-            <img src="https://www.hamqsl.com/solarmuf.php">
-            <iframe width="500" height="500" src="https://cybermap.kaspersky.com/cn/widget/dynamic/dark" frameborder="0"></iframe>
-            <br><div id="clock" style="color: purple"></div><br>
+        <br>
 
-        </center>
+        <div>
+            <h2>站点|WEB</h2>
+            <p>使用域名时,无端口号 </p>
+            <p>使用其他镜像站时,无80端口时使用1314端口</p>
+        </div>
+    <br>
+        <div>
+            <h2>代理|PROXY & VPN</h2>
+            <p>VPN使用SoftEtherVPN</p>
+            <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
+            <p>固定内网地址:x.x.x.1为路由器地址|x.x.x.2为服务器地址</p>
+            <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
+        </div>
+    <br>
+        <div>
+            <h2>资源库|RES</h2>
+            <p>获取我们的内部资源(书/项目/文献等资源列表)</p>
+            <a href="ARKFUTURE/RES/rel.csv">csv列表文件 [rel.csv]</a>
+        </div>
+    <br>
+        <div>
+            <h2>订阅源|RSS/FEED/ATOM</h2>
+            <a href="ARKFUTURE/RES/rss.opml">opml文件 [rss.opml]</a>
+        </div>
+    <br>
+        <div>
+            <h2 id="irc">聊天|IRC</h2>
+            <p>默认端口连接不上请切换备用端口连接</p>
+            <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
+            <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+            <a href="afeirc.yuun.ink">右击-复制链接后使用</a></li>
+        </div>
+    <br>
+        <div>
+            <h2>相关配置文件</h2>
+            <p>配置文件中所有密码为 123456,请及时修改</p>
+            <a href="ARKFUTURE/CONF/inspircd/1.sh">IRCD 下载脚本</a>
+            <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata6x配置文件</a>
+            <a href="ARKFUTURE/CONF/minecraft/server.properties">Minecraft配置文件</a>
+        </div>
+    <br>
+        <div>
+            <h2>其他项目</h2>
+            <p>战队：qq飞车-骇客军团</p>
+            <p>社交媒体：<a href="https://linktr.ee/arkfuture">ARKFUTURE 社交媒体</a></p>
+        </div>
+    <br>
+        <div>
+            <h2>小组件</h2>
+            <center>
+                <img src="https://www.hamqsl.com/solar101vhfper.php">
+                <img src="https://www.hamqsl.com/solar101vhfpic.php">
+                <img src="https://www.hamqsl.com/solarmuf.php">
+                <iframe width="500" height="500" src="https://cybermap.kaspersky.com/cn/widget/dynamic/dark" frameborder="0"></iframe>
+                <br><div id="clock" style="color: purple"></div><br>
+
+            </center>
+        </div>
     </div>
 
     <br><hr>
