--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>默认端口连接不上请切换备用端口连接</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>主要频道:#lobby(大厅),#rt(资源交易大厅),#mcs(MC服务器互联),其他频道请看motd</p>
+            <p>主要频道:#lobby(大厅),#rtx(资源交易大厅),#mcs(MC服务器互联),其他频道请看motd</p>
             <a href="afeirc.yuun.ink">右击-复制链接 后使用</a></li>
         </div>
     <br>
