(feat(inspircd): Update opermotd.txt to correct team info and welcome message)

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div>
             <h2>相关配置文件</h2>
             <p>配置文件中所有密码为 123456,请及时修改</p>
-            <a href="ARKFUTURE/CONF/inspircd/1.sh">IRCD 下载脚本</a>
-            <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata6x配置文件</a>
-            <a href="ARKFUTURE/CONF/minecraft/server.properties">Minecraft配置文件</a>
+            <a href="ARKFUTURE/inspircd/1.sh">IRCD 下载脚本</a>
+            <a href="ARKFUTURE/suricata/suricata.yaml">Suricata6x配置文件</a>
+            <a href="ARKFUTURE/minecraft/server.properties">Minecraft配置文件</a>
         </div>
     <br>
         <div>
@@ -106,7 +106,7 @@
                 <img src="https://www.hamqsl.com/solar101vhfper.php">
                 <img src="https://www.hamqsl.com/solar101vhfpic.php">
                 <img src="https://www.hamqsl.com/solarmuf.php">
-                <iframe width="500" height="500" src="https://cybermap.kaspersky.com/cn/widget/dynamic/dark" frameborder="0"></iframe>
+                
                 <br><div id="clock" style="color: purple"></div><br>
 
             </center>
