(feat(inspircd): Update index.html with rearranged channels and corrected link for IRC server)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
             <h2>快速功能连接</h2>
             <a href="ARKFUTURE/RES/fl.html">[fl.html]</a>
-            <h2>我们工作室的组织架构</h2>
+            <h2>工作室的组织架构</h2>
             <a href="http://naotu.baidu.com/file/237a12026bf90f9a1bf81750d9c5e522?token=bb81947091b70868">百度脑图</a>
         </div>
     </div>
