--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <p>主要频道:#lobby(大厅),#rtx(资源交易大厅),#mcs(MC服务器互联),其他频道请看motd</p>
-            <a href="afeirc.yuun.ink">右击-复制链接 后使用</a></li>
+            <a href="irc://afeirc.yuun.ink:6667">Link:afeirc.yuun.ink</a></li>
         </div>
     <br>
         <div>
