(feat(inspircd): Update index.html with new section for calendar and feed files)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         </div>
     <br>
         <div>
+            <h2>日历|WEBCAL</h2>
+            <p>我们的计划</p>
+            <a href="ARKFUTURE/RES/cal.ics">ics日历文件 [cal.ics]</a>
+        </div>
+    <br>
+        <div>
             <h2>订阅源|RSS/FEED/ATOM</h2>
             <a href="ARKFUTURE/RES/rss.opml">opml文件 [rss.opml]</a>
         </div>
