--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>快速功能连接</h2>
             <a href="ARKFUTURE/RES/fl.html">[fl.html]</a>
             <h2>工作室的组织架构</h2>
-            <a href="http://naotu.baidu.com/file/237a12026bf90f9a1bf81750d9c5e522?token=bb81947091b70868">百度脑图</a>
+            <img src="ARKFUTURE/RES/1.jpg" height="300" width="300" alt="1.jpg">
         </div>
     </div>
 
