(feat(inspircd): Update index.html with changes to services deployment and open-sourcing config files)

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
     <div>
         <h1 class="tit">ARKFUTURE NET</h1>
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
-        <P>我们以开源配置的方式和使用镜像服务器的方式部署</P>
-        <P>保证匿名性和开放性</P>
+        <P>我们使用镜像服务器的方式部署,保证服务的匿名性</P>
+        <P>我们开源我们相关的配置文件,任何人都可以下载修改并且用到自己的服务中</P>
+        <p>配置文件使用的都为弱密码123456;ARKFUTURE NET在配置文件中简写为ARKFUTURE</p>
 
         <br>
 
