(feat(inspircd): Update txt files for channel updates and open-sourcing config files)

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <h1 class="tit">ARKFUTURE NET</h1>
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
         <P>我们使用镜像服务器的方式部署,保证服务的匿名性</P>
-        <P>我们开源我们相关的配置文件,任何人都可以下载修改并且用到自己的服务中</P>
-        <p>配置文件使用的都为弱密码123456;ARKFUTURE NET在配置文件中简写为ARKFUTURE</p>
+        <P>我们开放我们相关的配置文件,任何人都可以下载修改并且用到自己的服务中</P>
 
         <br>
 
@@ -90,13 +89,13 @@
             <p>默认端口连接不上请切换备用端口连接</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>主要频道:#lobby(大厅),#rtx(资源交易大厅),#mcs(MC服务器互联),其他频道请看motd</p>
-            <a href="irc://afeirc.yuun.ink:6667">Link:afeirc.yuun.ink</a></li>
+            <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
+            <a href="irc://DOMAN:6667"><strong>irc://DOMAN:6667</strong></a>
         </div>
     <br>
         <div>
             <h2>相关配置文件</h2>
-            <p>配置文件中所有密码为 123456,请及时修改</p>
+            <p>配置文件中所有密码为 123456,请及时修改;;ARKFUTURE NET在配置文件中简写为ARKFUTURE</p>
             <a href="ARKFUTURE/inspircd/1.sh">IRCD 下载脚本</a>
             <a href="ARKFUTURE/suricata/suricata.yaml">Suricata6x配置文件</a>
             <a href="ARKFUTURE/minecraft/server.properties">Minecraft配置文件</a>
@@ -104,8 +103,9 @@
     <br>
         <div>
             <h2>其他项目</h2>
-            <p>战队：qq飞车-骇客军团</p>
-            <p>社交媒体：<a href="https://linktr.ee/arkfuture">ARKFUTURE 社交媒体</a></p>
+            <a href="https://github.com/ARKFUTURE">Github</a>
+            <a href="https://gitlab.com/ARKFUTURE">Gitlab</a>
+            <a href="https://gitee.com/ARKFUTURE">Gitee</a>
         </div>
     <br>
         <div>
