(feat(inspircd): Update conf files for module configs and motd, include new channel and update IRC links)

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
             <a href="irc://DOMAN:6667"><strong>irc://DOMAN:6667</strong></a>
+            <a href="ircs://DOMAN:6697"><strong>irc://DOMAN:6697</strong></a>
         </div>
     <br>
         <div>
