(feat(inspircd): Update footer text in index.html and RES/fl.html with revised content and group structure)

--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -180,8 +180,8 @@
 <!-------------页脚-------> 
 <footer>
     <center>
-        <p class="footer">方舟未来[工作室/实验室/集团]</p>
-        <p class="footer">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
+        <p class="footer">方舟未来|方舟未来工作室(集团)|方舟安全实验室</p>
+        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE STUDIO(GROUP)</a>|<a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
 </footer>
 </html>
