--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 <!-- footer -->
 <footer>
     <center>
-        <p class="footer">方舟未来|方舟未来集团|方舟未来工作室|方舟安全实验室</p>
-        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
+        <p class="footer">方舟未来|方舟未来工作室(集团)|方舟安全实验室</p>
+        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE STUDIO(GROUP)</a>|<a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
 </footer>
 
