(feat(arkfuture): Remove unnecessary files and update index.html with revised content)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>公约</h2>
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
-            <a href="ARKFUTURE/RES/ARKFUTURE.md">ARKFUTURE公约</a>
+            <iframe src="ARKFUTURE/html/ARKFUTURE.md" width="100%" height="100" frameborder="0">ARKFUTURE公约</iframe>
         </div>
         <br>
         <div>
@@ -36,9 +36,9 @@
         <br>
         <div>
             <h2>快速功能连接</h2>
-            <a href="ARKFUTURE/RES/fl.html">[fl.html]</a>
-            <h2>工作室的组织架构</h2>
-            <img src="ARKFUTURE/RES/1.jpg" height="300" width="300" alt="1.jpg">
+            <iframe src="ARKFUTURE/html/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <h2>链接</h2>
+            <iframe src="ARKFUTURE/html/link.html" width="100%" height="150" frameborder="0">Link</iframe>
         </div>
     </div>
 
@@ -120,49 +120,6 @@
         </div>
     </div>
 
-    <br><hr>
-
-    <div>
-        <h1 class="tit">链接|Link</h1>
-        <p>这个条目是展示一些链接</p>
-        <p>这些链接为随时随地使用而准备</p>
-        <p>展示链接不代表我们跟某个团体或公司合作</p>
-        <p>请右击->复制链接, 然后粘贴使用</p>
-
-        <div>
-            <h2>系统连接</h2>
-            <a href="https://parrotsec.org">ParrotSec</a>
-            <a href="https://blackarch.org">BlackArch</a>
-            <a href="https://www.debian.org">Debian</a>
-            <a href="https://www.openmediavault.org">OpenMediaVault</a>
-            <a href="https://uupdump.net">UUP dump</a>
-            <a href="https://openwrt.org/">OpenWrt</a>
-        </div>
-        <br>
-        <div>
-            <h2>NTP授时服务器</h2>
-            <a href="ntp.ntsc.ac.cn">国家授时中心 NTP 服务器</a>
-            <a href="cn.ntp.org.cn">中国 NTP 快速授时服务</a>
-            <a href="edu.ntp.org.cn">中国教育网专用NTP</a>
-        </div>
-        <br>
-        <div>
-            <h2>Tracker 这个作为bt种子的下载服务器</h2>
-            <a href="http://opentrackr.org">OPENTRACKER</a>
-            <a href="https://trackerslist.com">TRACKERSLIST</a>
-        </div>
-        <br>
-        <div>
-            <h2>私人DNS</h2>
-            <p>DoT(DNS over TLS,仅限域名)</p>
-            <a href="dns.alidns.com">阿里云 DoT</a>
-            <a href="dot.pub">腾讯云 DoT</a>
-            <a href="1dot1dot1dot1.cloudflare-dns.com">Cloudflare DoT</a>
-            <p>DoH(DNS Over HTTPS)</p>
-            <a href="https://1.0.0.1/dns-query">Cloudflare DoH</a>
-            <a href="https://doh.opendns.com/dns-query">Opendns DoH</a>
-        </div>
-    </div>
 
     <br><hr>
 
@@ -259,6 +216,10 @@
         position: relative;
         border-bottom: 1px dotted;
         color: #fcb045;
+    }
+
+    iframe{
+      overflow: hidden;
     }
 
 </style>
