(feat(arkfuture): Remove unnecessary files and update index.html with revised content)

--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
         </div>
-        <br>
-        <div>
-            <h2>快速功能连接</h2>
-            <iframe src="ARKFUTURE/html/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <h2>链接</h2>
-            <iframe src="ARKFUTURE/html/link.html" width="100%" height="150" frameborder="0">Link</iframe>
-        </div>
+
     </div>
 
     <br><hr>
@@ -47,29 +41,32 @@
     <div>
         <h1 class="tit">ARKFUTURE NET</h1>
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
-        <P>我们使用镜像服务器的方式部署,保证服务的匿名性</P>
-        <P>我们开放我们相关的配置文件,任何人都可以下载修改并且用到自己的服务中</P>
-
-        <br>
-
+    <br>
         <div>
             <h2>站点|WEB</h2>
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
+            <h2>快链|FAST LINK</h2>
+            <iframe src="ARKFUTURE/HTML/" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <h2>链接|LINK</h2>
+            <iframe src="ARKFUTURE/HTML/" width="100%" height="150" frameborder="0">Link</iframe>
+        </div>
+    <br>
+        <div>
+            <h2 id="irc">聊天|IRC</h2>
+            <p>默认端口连接不上请切换备用端口连接</p>
+            <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
+            <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+            <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
+            <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
+            <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
+            <p>IRC包括:[代理|PROXY & VPN][日历|WEBCAL][订阅源|RSS/FEED/ATOM]服务</p>
         </div>
     <br>
         <div>
             <h2>代理|PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <p>固定内网地址:x.x.x.1为路由器地址|x.x.x.2为服务器地址</p>
-            <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
-        </div>
-    <br>
-        <div>
-            <h2>资源库|RES</h2>
-            <p>获取我们的内部资源(书/项目/文献等资源列表)</p>
-            <a href="ARKFUTURE/RES/rel.csv">csv列表文件 [rel.csv]</a>
         </div>
     <br>
         <div>
@@ -82,16 +79,6 @@
             <h2>订阅源|RSS/FEED/ATOM</h2>
             <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml]</a>
             <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [rss.opml]</a>
-        </div>
-    <br>
-        <div>
-            <h2 id="irc">聊天|IRC</h2>
-            <p>默认端口连接不上请切换备用端口连接</p>
-            <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
-            <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
-            <a href="irc://DOMAN:6667"><strong>irc://DOMAN:6667</strong></a>
-            <a href="ircs://DOMAN:6697"><strong>irc://DOMAN:6697</strong></a>
         </div>
     <br>
         <div>
@@ -113,13 +100,10 @@
                 <img src="https://www.hamqsl.com/solar101vhfper.php">
                 <img src="https://www.hamqsl.com/solar101vhfpic.php">
                 <img src="https://www.hamqsl.com/solarmuf.php">
-                
                 <br><div id="clock" style="color: purple"></div><br>
-
             </center>
         </div>
     </div>
-
 
     <br><hr>
 
@@ -216,10 +200,6 @@
         position: relative;
         border-bottom: 1px dotted;
         color: #fcb045;
-    }
-
-    iframe{
-      overflow: hidden;
     }
 
 </style>
