--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div>
             <h2>相关配置文件</h2>
             <p>配置文件中所有密码为 123456,请及时修改;;ARKFUTURE NET在配置文件中简写为ARKFUTURE</p>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE">此目录下均为相关的配置文件</a>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此目录下均为相关的配置文件</a>
         </div>
     <br>
         <div>
