(feat(arkfuture): Update index.html with revised content, links, and remove unnecessary elements)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
             <h2>快链|FAST LINK</h2>
-            <iframe src="ARKFUTURE/HTML/" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <h2>链接|LINK</h2>
-            <iframe src="ARKFUTURE/HTML/" width="100%" height="150" frameborder="0">Link</iframe>
+            <iframe src="ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">Link</iframe>
         </div>
     <br>
         <div>
@@ -67,6 +67,7 @@
             <h2>代理|PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
+            <a href="ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
         </div>
     <br>
         <div>
@@ -82,26 +83,15 @@
         </div>
     <br>
         <div>
-            <h2>相关配置文件</h2>
-            <p>配置文件中所有密码为 123456,请及时修改;;ARKFUTURE NET在配置文件中简写为ARKFUTURE</p>
+            <h2>与我相关</h2>
+            <p>我们的配置文件</p>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此目录下均为相关的配置文件</a>
-        </div>
-    <br>
-        <div>
-            <h2>其他项目</h2>
-            <a href="https://github.com/ARKFUTURE">Github</a>
-            <a href="https://gitlab.com/ARKFUTURE">Gitlab</a>
-            <a href="https://gitee.com/ARKFUTURE">Gitee</a>
+            <p>我们的代码:[github][gitlab][gitee]</p>
         </div>
     <br>
         <div>
             <h2>小组件</h2>
-            <center>
-                <img src="https://www.hamqsl.com/solar101vhfper.php">
-                <img src="https://www.hamqsl.com/solar101vhfpic.php">
-                <img src="https://www.hamqsl.com/solarmuf.php">
-                <br><div id="clock" style="color: purple"></div><br>
-            </center>
+            <iframe src="ARKFUTURE/HTML/zj.html" width="100%" height="150" frameborder="0">Link</iframe>
         </div>
     </div>
 
@@ -210,6 +200,7 @@
 <!-- footer -->
 <footer>
     <center>
+        <br><div id="clock" style="color: purple"></div><br>
         <p class="footer">方舟未来|方舟未来工作室(集团)|方舟安全实验室</p>
         <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE STUDIO(GROUP)</a>|<a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
