--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
-            <p>IRC包括:[代理|PROXY & VPN][日历|WEBCAL][订阅源|RSS/FEED/ATOM]服务</p>
+            <p>IRC包括:[代理|PROXY & VPN][日历|WEBCAL][订阅源|RSS/FEED/ATOM][资源库|RES]服务</p>
         </div>
     <br>
         <div>
@@ -91,7 +91,7 @@
     <br>
         <div>
             <h2>小组件</h2>
-            <iframe src="ARKFUTURE/HTML/zj.html" width="100%" height="150" frameborder="0">Link</iframe>
+            <iframe src="ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     </div>
 
