--- a/ARKFUTURE/html/link.html
+++ b/ARKFUTURE/html/link.html
@@ -14,7 +14,7 @@
 <!-- body -->
 <body>
     <div>
-        <h2 class="tit">链接|Link</h2>
+        <h2 class="tit">链接|Link -- 往下滑</h2>
         <p>这个条目是展示一些链接,这些链接为随时随地使用而准备</p>
         <p>这些链接都是公开的,展示链接不代表我们跟某个团体或公司合作</p>
         <p>请右击->复制链接, 然后粘贴使用</p>
