--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
-            <p>IRC包括:[代理|PROXY & VPN][日历|WEBCAL][订阅源|RSS/FEED/ATOM][资源库|RES]服务</p>
         </div>
     <br>
         <div>
@@ -71,9 +70,10 @@
         </div>
     <br>
         <div>
-            <h2>日历|WEBCAL</h2>
-            <p>我们的计划</p>
-            <a href="ARKFUTURE/RES/cal.ics">ics日历文件 [cal.ics]</a>
+            <h2>计划|ToDo</h2>
+            <iframe src="ARKFUTURE/HTML/todo.html" width="100%" height="150" frameborder="0"></iframe>
+        </div>
+            
         </div>
     <br>
         <div>
@@ -85,8 +85,8 @@
         <div>
             <h2>与我相关</h2>
             <p>我们的配置文件</p>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此目录下均为相关的配置文件</a>
-            <p>我们的代码:[github][gitlab][gitee]</p>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
+            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
         </div>
     <br>
         <div>
@@ -112,14 +112,14 @@
 
         <p>我们崇尚黑客精神</p>
         <pre>
-            黑客精神Hacker ，这个词是用来形容那些热衷于解决问题、克服限制的人。
+            黑客精神Hacker,这个词是用来形容那些热衷于解决问题,克服限制的人.
 
-            “任何职业都可以成为黑客。你可以是一个木匠黑客。不一定是高科技。只要与技能有关，并且倾心专注于你正在做的事情，你就可能成为黑客。”
-                                                                                ----引自《黑客伦理与信息时代精神》。
+            "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
+                                                                                ----引自《黑客伦理与信息时代精神》
         </pre>
         <p>我们也崇尚开源精神</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
-        <p>INGO(国际非政府组织)&NPO(非营利组织)&OS(开源共创)&CL(持续学习)</p>
+        <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
 
     </div>
