--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
         <div>
             <h2 id="irc">聊天|IRC</h2>
-            <p>默认端口连接不上请切换备用端口连接</p>
+            <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
@@ -87,6 +87,7 @@
             <p>我们的配置文件</p>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
             <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
+            <p>我们的资源库:加入我们获取资源库列表</p>
         </div>
     <br>
         <div>
