--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
             <h2>快链|FAST LINK</h2>
-            <iframe src="ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="ARKFUTURE/html/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <h2>链接|LINK</h2>
-            <iframe src="ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">Link</iframe>
+            <iframe src="ARKFUTURE/html/link.html" width="100%" height="150" frameborder="0">Link</iframe>
         </div>
     <br>
         <div>
