(feat(arkfuture): Remove unnecessary files and update html content)

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <br>
         <div>
             <h2>计划|ToDo</h2>
-            <iframe src="ARKFUTURE/HTML/todo.html" width="100%" height="150" frameborder="0"></iframe>
+            <iframe src="ARKFUTURE/html/todo.html" width="100%" height="150" frameborder="0"></iframe>
         </div>
             
         </div>
