--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>公约</h2>
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
-            <iframe src="https://arkfuture.github.io/ARKFUTURE/HL/ARKFUTURE.md" width="100%" height="100" frameborder="0">ARKFUTURE公约</iframe>
+            <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="100" frameborder="0">ARKFUTURE公约</iframe>
         </div>
         <br>
         <div>
@@ -47,9 +47,9 @@
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
             <h2>快链|FAST LINK</h2>
-            <iframe src="https://arkfuture.github.io/ARKFUTURE/HL/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <h2>链接|LINK</h2>
-            <iframe src="https://arkfuture.github.io/ARKFUTURE/HL/link.html" width="100%" height="150" frameborder="0">链接</iframe>Link</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>Link</iframe>
         </div>
     <br>
         <div>
@@ -66,12 +66,12 @@
             <h2>代理|PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <a href="ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
+            <a href="/ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
         </div>
     <br>
         <div>
             <h2>计划|ToDo</h2>
-            <iframe src="https://arkfuture.github.io/ARKFUTURE/HL/todo.html" width="100%" height="150" frameborder="0"></iframe>
+            <iframe src="/ARKFUTURE/HTML/todo.html" width="100%" height="150" frameborder="0"></iframe>
         </div>
             
         </div>
@@ -92,7 +92,7 @@
     <br>
         <div>
             <h2>小组件</h2>
-            <iframe src="ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     </div>
 
