(feat(arkfuture): Update iframe src paths in index.html)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>公约</h2>
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
-            <iframe src="ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="100" frameborder="0">ARKFUTURE公约</iframe>
+            <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="100" frameborder="0">公约</iframe>
         </div>
         <br>
         <div>
@@ -49,7 +49,7 @@
             <h2>快链|FAST LINK</h2>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <h2>链接|LINK</h2>
-            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>Link</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
         </div>
     <br>
         <div>
