(feat(arkfuture): Update fl.html with corrected link text for accessibility) sd

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div>
             <h2>加入我们</h2>
             <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
+            <li><a href="">BiglyBT聊天室 [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
-            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a>
-            </li>
+            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
         </div>
 
@@ -93,7 +93,7 @@
         <p>我们的配置文件</p>
         <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
         <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
-        <p>我们的资源库:加入我们获取资源库列表</p>
+        <p>我们的资源库:请联系arkfuture</p>
     </div>
     <br>
     <div>
