--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -9,7 +9,7 @@
 <!--------------------> 
 <body>
 <h2>快链 -- 往下滑</h2>
-<a href="../HTML/fl.html">本页链接错误请右击此项新建标签页打开</a>
+<a href="../HTML/fl.html">本页链接错误请右击此项[新建标签页打开]</a>
 <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
 <br>
 <h2>搜索引擎</h2>
