(feat(arkfuture): Update index.html with new terminal feature and help message)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     <br>
         <div>
-            <h2>快捷终端(纯本地js实现)</h2>
+            <h2>快捷终端(输入help查看帮助)</h2>
             <div id="terminal"></div>  
             <input type="text" id="input" placeholder="输入命令...">  
             <script src="tm.js"></script> 
