(feat(arkfuture): Update index.html with revised content, titles, and iframes)

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <h2>站点|WEB</h2>
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
-            <h2>快链|FAST LINK</h2>
+            <h3>快链|FAST LINK</h3>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <h2>链接|LINK</h2>
+            <h3>链接|LINK</h3>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
         </div>
         <br>
@@ -88,24 +88,33 @@
 
     </div>
     <br>
-    <div>
-        <h2>订阅源|RSS/FEED/ATOM</h2>
-        <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml]</a>
-        <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [rss.opml]</a>
-    </div>
+        <div>
+            <h2>订阅源|RSS/FEED/ATOM</h2>
+            <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml]</a>
+            <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [rss.opml]</a>
+        </div>
     <br>
-    <div>
-        <h2>与我相关</h2>
-        <p>我们的配置文件</p>
-        <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
-        <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
-        <p>我们的资源库:请联系arkfuture</p>
-    </div>
+        <div>
+            <h2>内网</h2>
+            <p style="color: red;">内网须知:需要连接irc ,在irc中根据motd提示申请内网后账户</p>
+            <p>我们的内网服务有:</p>
+            <p>文件共享与协作服务: nas服务,webdav-todolist,webcal</p>
+            <p>项目管理及代码版本控制服务: git,gitlab</p>
+            <p>内部文档与知识库:暂时使用dokuwiki,以后可能会切换到foswiki</p>
+            <p>内部邮件服务:暂时使用dovecot,以后可能会切换到postfix</p>
+        </div>
     <br>
-    <div>
-        <h2>小组件</h2>
-        <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
-    </div>
+        <div>
+            <h2>与我相关</h2>
+            <p>我们的配置文件</p>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
+            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
+        </div>
+    <br>
+        <div>
+            <h2>小组件</h2>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+        </div>
     </div>
 
     <br>
@@ -149,7 +158,6 @@
 <footer>
     <center>
         <br>
-        <div id="clock" style="color: purple"></div><br>
         <p class="footer">方舟未来|方舟未来工作室(集团)|方舟安全实验室</p>
         <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE STUDIO(GROUP)</a>|<a
                 href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their
