(feat(arkfuture): Update inspircd config and txt files, adjust IRC settings and motd)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
+            <p>欢迎同志们查看并审查我们的IRC相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
         </div>
