--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <h1 class="tit">关于|About</h1>
 
         <div>
-            <h2>公约</h2>
+            <h2>公约 | CONVENTION</h2>
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
             <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">快速链接</iframe>
         </div>
         <br>
         <div>
-            <h2>加入我们</h2>
+            <h2>加入我们 | JOIN US</h2>
             <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
             <li><a href="">BiglyBT聊天室 [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
@@ -40,12 +40,11 @@
         </div>
     <br>
         <div>
-            <h2>快捷终端(输入help查看帮助)</h2>
-            <div id="terminal"></div>  
-            <input type="text" id="input" placeholder="输入命令...">  
-            <script src="tm.js"></script> 
+            <h2>公益 | PUBLIC WELFARE</h2>
+            <li><p>BeMyEyes 群组 : ARKFUTURE</p></li>
+            <li><p>街猫 群组 : ARKFUTURE</p></li>
 
-    </div>
+        </div>
 
     <br>
     <hr>
@@ -65,14 +64,14 @@
         </div>
         <br>
         <div>
-            <h2 id="irc">聊天|IRC</h2>
+            <h2 id="irc">聊天|IRC&VOIP&MEETING</h2>
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>主要频道:#lobby(大厅);IRC工作组:#arkfuture</p>
-            <p>欢迎同志们查看并审查我们的IRC相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>欢迎您查看并审查我们的IRC相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
+            <a href="https://meet.jit.si/ThearkfutureMEETING"><strong>临时会议</strong></a>
         </div>
         <br>
         <div>
@@ -84,7 +83,7 @@
         <br>
         <div>
             <h2>计划|ToDo</h2>
-            <iframe src="/ARKFUTURE/HTML/todo.html" width="100%" height="150" frameborder="0"></iframe>
+            <iframe src="" width="100%" height="150" frameborder="0"></iframe>
         </div>
 
     </div>
@@ -126,6 +125,8 @@
 
         <a href="https://www.gnu.org/licenses/">GNU开源许可</a>
         <a href="https://creativecommons.org/licenses/">CC知识许可</a>
+        <a href="https://www.apache.org/licenses/">Apache开源许可</a>
+        <a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a>
         <p>除了以上许可证，其他许可证我们也在使用，因为篇幅，我们不再写其他的了</p>
     </div>
 
