--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <div>
             <h2>订阅源|RSS/FEED/ATOM</h2>
             <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml]</a>
-            <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [rss.opml]</a>
+            <a href="ARKFUTURE/RES/newsrss.opml">社区新闻订阅源 [newsrss.opml]</a>
+            <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [csrss.opml]</a>
         </div>
     <br>
         <div>
