--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>ARKFUTURE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css.css">
-    <script src="js.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css.css">
+    <script src="/js.js"></script>
     <script src=""></script>
 </head>
 
@@ -52,15 +52,17 @@
     <div>
         <h1 class="tit">ARKFUTURE NET</h1>
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
-        <br>
+    <br>
         <div>
             <h2>站点|WEB</h2>
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
+            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关服务的配置文件</a>
         </div>
-        <br>
+    <br>
         <div>
             <h2 id="irc">聊天|IRC&VOIP&MEETING</h2>
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
@@ -69,22 +71,15 @@
             <p>欢迎您查看并审查我们的IRC相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
-            <a href="https://meet.jit.si/ThearkfutureMEETING"><strong>临时会议</strong></a>
+            <a href="https://meet.jit.si/THE_ARKFUTURE_MEETING"><strong>临时会议</strong></a>
         </div>
-        <br>
+    <br>
         <div>
             <h2>代理|PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
             <a href="/ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
         </div>
-        <br>
-        <div>
-            <h2>计划|ToDo</h2>
-            <iframe src="" width="100%" height="150" frameborder="0"></iframe>
-        </div>
-
-    </div>
     <br>
         <div>
             <h2>订阅源|RSS/FEED/ATOM</h2>
@@ -95,19 +90,11 @@
     <br>
         <div>
             <h2>内网</h2>
-            <p style="color: red;">内网须知:需要连接irc ,在irc中根据motd提示申请内网后账户</p>
+            <p style="color: red;">内网须知:需要连接irc ,在irc中根据motd提示申请内网账户</p>
             <p>我们的内网服务有:</p>
             <p>文件共享与协作服务: nas服务,webdav-todolist,webcal</p>
             <p>项目管理及代码版本控制服务: git,gitlab</p>
             <p>内部文档与知识库:暂时使用dokuwiki,以后可能会切换到foswiki</p>
-            <p>内部邮件服务:暂时使用dovecot,以后可能会切换到postfix</p>
-        </div>
-    <br>
-        <div>
-            <h2>与我相关</h2>
-            <p>我们的配置文件</p>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关的配置文件</a>
-            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE</p>
         </div>
     <br>
         <div>
@@ -148,10 +135,7 @@
         <p>我们是一群追寻自己梦想的人</p>
 
     </div>
-<style>
 
-    </style>
-    <!--JS及XSS的结束!!!!!!!!!!!!!!!!!!!!-->
 </body>
 <br>
 
