(feat(arkfuture): Update index.html with revised meta charset, titles, content, and links)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>ARKFUTURE</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" version="1.7">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css.css">
     <script src="/js.js"></script>
@@ -54,7 +54,7 @@
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
     <br>
         <div>
-            <h2>站点|WEB</h2>
+            <h2>站点 | WEB</h2>
             <p>使用域名时,无端口号 </p>
             <p>使用其他镜像站时,无80端口时使用1314端口</p>
             <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
@@ -64,7 +64,7 @@
         </div>
     <br>
         <div>
-            <h2 id="irc">聊天|IRC&VOIP&MEETING</h2>
+            <h2 id="irc">聊天 | IRC&VOIP&MEETING</h2>
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
@@ -75,14 +75,14 @@
         </div>
     <br>
         <div>
-            <h2>代理|PROXY & VPN</h2>
+            <h2>代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
             <a href="/ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
         </div>
     <br>
         <div>
-            <h2>订阅源|RSS/FEED/ATOM</h2>
+            <h2>订阅源 | RSS/FEED/ATOM</h2>
             <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml]</a>
             <a href="ARKFUTURE/RES/newsrss.opml">社区新闻订阅源 [newsrss.opml]</a>
             <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [csrss.opml]</a>
@@ -90,9 +90,9 @@
     <br>
         <div>
             <h2>内网</h2>
-            <p style="color: red;">内网须知:需要连接irc ,在irc中根据motd提示申请内网账户</p>
+            <p style="color: red;">内网须知:在聊天群组中中根据[motd/公告提示]申请内网账户</p>
             <p>我们的内网服务有:</p>
-            <p>文件共享与协作服务: nas服务,webdav-todolist,webcal</p>
+            <p>文件共享与协作服务: nas服务,todolist</p>
             <p>项目管理及代码版本控制服务: git,gitlab</p>
             <p>内部文档与知识库:暂时使用dokuwiki,以后可能会切换到foswiki</p>
         </div>
@@ -143,8 +143,8 @@
 <footer>
     <center>
         <br>
-        <p class="footer">方舟未来|方舟未来工作室(集团)|方舟安全实验室</p>
-        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE STUDIO(GROUP)</a>|<a
+        <p class="footer">方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
+        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a
                 href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their
             respective owners.</p>
     </center>
