(feat(arkfuture): Update index.html and js.js with revised content, links, and titles, interval changed to 1500ms)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css.css">
     <script src="/js.js"></script>
-    <script src=""></script>
 </head>
 
 <!-- body -->
@@ -29,7 +28,7 @@
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
             <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">快速链接</iframe>
         </div>
-        <br>
+    <br>
         <div>
             <h2>加入我们 | JOIN US</h2>
             <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
@@ -55,12 +54,13 @@
     <br>
         <div>
             <h2>站点 | WEB</h2>
-            <p>使用域名时,无端口号 </p>
-            <p>使用其他镜像站时,无80端口时使用1314端口</p>
+            <p>镜像站端口: 1314</p>
+            <a href="#intranet">内网</a>
             <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/">此链接的目录下均为相关服务的配置文件</a>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/" id="config">此链接的目录下均为相关服务的配置文件</a>
+            
         </div>
     <br>
         <div>
@@ -68,7 +68,7 @@
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>欢迎您查看并审查我们的IRC相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>欢迎您查看并审查我们的<a href="#config">IRC及相关配置文件</a>,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
             <a href="https://meet.jit.si/THE_ARKFUTURE_MEETING"><strong>临时会议</strong></a>
@@ -89,7 +89,7 @@
         </div>
     <br>
         <div>
-            <h2>内网</h2>
+            <h2 id="intranet">内网</h2>
             <p style="color: red;">内网须知:在聊天群组中中根据[motd/公告提示]申请内网账户</p>
             <p>我们的内网服务有:</p>
             <p>文件共享与协作服务: nas服务,todolist</p>
