--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+            <p>我们接入了I2P, 也请您使用I2P的IRC服务,I2P地址:</p>
             <p>欢迎您查看并审查我们的IRC及相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
