--- a/index.html
+++ b/index.html
@@ -56,23 +56,29 @@
             <h2>站点 | WEB</h2>
             <p>镜像站端口: 1314</p>
             <a href="#intranet">内网</a>
-            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
+            <p>----</p>
+            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/" id="config">此链接的目录下均为相关服务的配置文件</a>
             
         </div>
     <br>
         <div>
-            <h2 id="irc">聊天 | IRC&VOIP&MEETING</h2>
+            <h2 id="irc">聊天 | IRC&USENET&VOIP</h2>
+            <h3>IRC</h3>
             <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <p>我们接入了I2P, 也请您使用I2P的IRC服务,I2P地址:</p>
-            <p>欢迎您查看并审查我们的IRC及相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
-            <a href="https://meet.jit.si/THE_ARKFUTURE_MEETING"><strong>临时会议</strong></a>
+            <h3>USENET</h3>
+            <p>新闻组服务正在搭建中,2025年推出</p>
+            <h3>VOIP</h3>
+            <p>视频音频方面正在寻找替代品</p>
+            <p>----</p>
+            <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
     <br>
         <div>
