--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     <br>
         <div>
-            <h2>加入我们 | JOIN US</h2>
+            <h2>加入我们的开放社区 | JOIN US</h2>
             <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
             <li><a href="">BiglyBT聊天室 [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
@@ -54,29 +54,26 @@
     <br>
         <div>
             <h2>站点 | WEB</h2>
-            <p>镜像站端口: 1314</p>
-            <a href="#intranet">内网</a>
+            <a href="#intranet">内网</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/" id="config">此链接的目录下均为相关服务的基础配置文件</a>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">链接</iframe>
-            <p>----</p>
-            <p>我们的代码:在 [github][gitlab][gitee] 搜索ARKFUTURE, 及内网的git服务</p>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/" id="config">此链接的目录下均为相关服务的配置文件</a>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
             
         </div>
     <br>
         <div>
             <h2 id="irc">聊天 | IRC&USENET&VOIP</h2>
             <h3>IRC</h3>
-            <p>默认端口连接不上请切换备用端口连接,请仔细阅读motd</p>
+            <p>默认端口连接不上请切换备用端口连接,加入后请仔细阅读motd</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <p>我们接入了I2P, 也请您使用I2P的IRC服务,I2P地址:</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
             <a href="ircs://IRC.DOMAN:6697"><strong>irc://IRC.DOMAN:6697</strong></a>
             <h3>USENET</h3>
-            <p>新闻组服务正在搭建中,2025年推出</p>
+            <p>请使用任意新闻组客户端阅读</p>
+            <a href="news://NEWS.DOMAN"><strong>news://NEWS.DOMAN</strong></a>
             <h3>VOIP</h3>
-            <p>视频音频方面正在寻找替代品</p>
+            <p>待添加</p>
             <p>----</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
@@ -97,12 +94,12 @@
         </div>
     <br>
         <div>
-            <h2 id="intranet">内网</h2>
+            <h2 id="intranet">内网及管理运维组服务</h2>
             <p style="color: red;">内网须知:在聊天群组中中根据[motd/公告提示]申请内网账户</p>
             <p>我们的内网服务有:</p>
-            <p>文件共享与协作服务: nas服务,todolist</p>
-            <p>项目管理及代码版本控制服务: git,gitlab</p>
-            <p>内部文档与知识库:暂时使用dokuwiki,以后可能会切换到foswiki</p>
+            <p>资源分发: nas</p>
+            <p>项目管理: github</p>
+            <p>内部文档与知识库: 待搭建</p>
         </div>
     <br>
         <div>
