--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div>
             <h2>加入我们的开放社区 | JOIN US</h2>
             <h3>社群开放聊天室</h3>
-            <li><a href="#balabala">IRC及USENET [#arkfuture_studio]</a></li>
+            <li><a href="#balabala">IRC&USENET [#arkfuture_studio]</a></li>
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
-            <h3>社会 | 社交</h3>
+            <h3>社交</h3>
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK及INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
@@ -77,8 +77,6 @@
             <h3>USENET</h3>
             <p>请使用任意新闻组客户端阅读</p>
             <a href="news://NEWS.DOMAN"><strong>news://NEWS.DOMAN</strong></a>
-            <h3>VOIP</h3>
-            <p>待添加</p>
             <p>----</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <p>管理运维组属于封闭不公开式群组聊天室, 加入请私聊任意聊天的NICK:arkfuture</p>
