--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- update 2024/11/28 -->
 <html>
 
 <!-- head -->
@@ -32,13 +33,13 @@
         <div>
             <h2>加入我们的开放社区 | JOIN US</h2>
             <h3>社群开放聊天室</h3>
-            <li><a href="#balabala">IRC&USENET [#arkfuture_studio]</a></li>
+            <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <h3>社交</h3>
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
-            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK及INS [@arkfuture]</a></li>
+            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">发邮件给我</a></li>
         </div>
@@ -67,9 +68,9 @@
         </div>
     <br>
         <div>
-            <h2 id="balabala">聊天 | IRC&USENET&VOIP</h2>
+            <h2 id="balabala">聊天及新闻组 | IRC&USENET</h2>
             <h3>IRC</h3>
-            <p>默认端口连接不上请切换备用端口连接,加入后请仔细阅读motd</p>
+            <p>默认端口连接不上请切换备用端口连接</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
             <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
@@ -78,23 +79,24 @@
             <p>请使用任意新闻组客户端阅读</p>
             <a href="news://NEWS.DOMAN"><strong>news://NEWS.DOMAN</strong></a>
             <p>----</p>
+            <p>加入相关服务后请仔细阅读motd</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p>管理运维组属于封闭不公开式群组聊天室, 加入请私聊任意聊天的NICK:arkfuture</p>
+            <p style="color: red;">管理运维组属于封闭不公开式群组聊天室, 加入请私聊任意聊天的NICK:arkfuture</p>
         </div>
     <br>
         <div>
             <h2>代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <a href="ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
+            <a href="/ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
         </div>
     <br>
         <div>
             <h2>订阅源 | RSS/FEED/ATOM</h2>
-            <a href="ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml] 文件更新频率:每周收集更新</a>
-            <a href="ARKFUTURE/RES/newsrss.opml">社区新闻订阅源 [newsrss.opml] 文件更新频率:常用链接暂停更新</a>
-            <a href="ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml] 文件更新频率:未出现新链接时暂停更新</a>
-            <a href="ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [csrss.opml] 文件更新频率:未出现新链接时暂停更新</a>
+            <a href="/ARKFUTURE/RES/rss.opml">普通订阅源 [rss.opml] 文件更新频率:每周收集更新</a>
+            <a href="/ARKFUTURE/RES/newsrss.opml">社区新闻订阅源 [newsrss.opml] 文件更新频率:常用链接暂停更新</a>
+            <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml] 文件更新频率:未出现新链接时暂停更新</a>
+            <a href="/ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [csrss.opml] 文件更新频率:未出现新链接时暂停更新</a>
         </div>
     <br>
         <div>
@@ -108,7 +110,7 @@
     <br>
         <div>
             <h2>小组件</h2>
-            <iframe src="ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     </div>
 
