--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <a href="/ARKFUTURE/RES/proxy.pac">代理配置示例文件 [proxy.pac]</a>
+            <a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a>
         </div>
     <br>
         <div>
